# projectc

ag/: Makefile  Makefile.am  Makefile.in  ag.glade  ag.glade.bak  ag.gladep  config.h  config.status  configure  configure.in
ag/autom4te.cache/: output.0  requests  traces.0  traces.1
ag/po/: Makefile  Makefile.in
ag/src/: Makefile  Makefile.am  Makefile.in  admin.c  admin.h  ag  avis.txt  callbacks.c  callbacks.h  compt.txt  exc.txt  fact.c  factexc.txt  facthot.txt  facture.txt  factvol.txt  hhhh.h  hot.txt  interface.c  interface.c.bak  interface.h  interface.h.bak  jjjj.c  main.c  nour.c  nour.h  recla.c  recla.h  recla.txt  rese.c  rese.h  reservations.txt  resexc.txt  reshot.txt  resvol.txt  user.txt  verif.c  verif.h  vol.txt
ag/src/.deps/: admin.Po  callbacks.Po  fact.Po  jjjj.Po  recla.Po  rese.Po  verif.Po
nour1/: Makefile  Makefile.am  Makefile.in  atelier-tree.glade.bak  atelier-tree.gladep  config.h  config.status  configure  configure.in
nour1/autom4te.cache/: output.1  requests  traces.0  traces.1
nour1/po/: Makefile  (+1 more)
nour2/: Makefile  Makefile.am  Makefile.in  atelier-combo-spin  atelier-combo-spin.glade.bak  atelier-combo-spin.gladep  config.h  config.status  configure  configure.in  salle.txt  sallesReserve.txt
nour2/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  reservation.c  reservation.h  sallesReserve.txt
nour2/src/.deps/: callbacks.Po
project4/: Makefile  config.status  project4.glade.bak
project5/: Makefile  Makefile.in  config.h  config.status  configure  project5.glade.bak
(+57 files in other folders)
